feat: teacher by group method
