# schedule/common/tsu/api.yaml
@@ -46,6 +46,45 @@ paths:
                 type: array
                 items:
                   $ref: "#/components/schemas/DaySchedule"
+  /schedule/professor:
+    get:
+      summary: Schedule by group
+      tags:
+        - Schedule
+      parameters:
+        - name: id
+          in: query
+          required: true
+          description: teacher identifier
+          x-go-name: ID
+          schema:
+            type: string
+        - name: dateFrom
+          in: query
+          required: true
+          description: "date to start from"
+          schema:
+            type: string
+            format: date
+            example: "2022-04-17"
+        - name: dateTo
+          in: query
+          required: true
+          description: "date to end"
+          schema:
+            type: string
+            format: date
+            example: "2022-04-24"
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                title: "Schedule days"
+                type: array
+                items:
+                  $ref: "#/components/schemas/DaySchedule"
   /faculties:
     get:
       summary: Get all faculties
